# cldcde

./: .env.example  .env.production.template  .eslintrc.js  .gitignore  .gitleaks.toml  @AEGNTIC_SKILLS_INSTALLED.md  AI_AGENT_ECOSYSTEM_NOTES.md  ANTIGRAVITY_INTEGRATION_GUIDE.md  CHECKPOINT_2025-11-20.md  CLAUDE.md  CLAUDE_CLI_SHORTCUTS.md  CONSOLIDATION.md  CONTRIBUTING.md  CONTRIBUTORS.md  CRITICAL_ANALYSIS.md  CRITICAL_ANALYSIS_PREMIUM_SYSTEMS.md  Cargo.toml  D1_MIGRATION_GUIDE.md  DEPLOYMENT-V2.md  DEPLOYMENT.md  Dockerfile.api  FEATURED-RESOURCES.md  GH_CLI_AUTH.md  GITHUB-SETUP-COMPLETE.md  GITHUB_INTEGRATION.md  INSTALL.md  INTEGRATION.md  LICENSE  PORKBUN-DNS.md  README-context-tracker.md  README.md  REPO_CLEANUP_PLAN.md  SECURITY.md  STRUCTURE_VERIFICATION.md  TASKS.md  check-build.sh  check-setup.ts  claude-with-monitor.js  context-monitor.js  debug_simple_server.rs  (+34 more)
.agent/: plugins-registry.json
.claude-plugin/: ecosystem.json  marketplace.json  plugin-example-tiered.json
.pages-dist/: _headers  index.html  index.js
.swarm/: memory.db
_legacy/: server.ts
aegnt/: LICENSE  README.md  __init__.py  orchestrator.py  requirements.txt  setup.py
aegntic-hive-mcp/: .env.example  README.md  claude-config.json  conversations.db  database.js  example-project-structure.json  install.sh  package-lock.json  package.json  scrapers.js  search.js  server.js  test.js
agent-zero/: README.md
agents/: deployment-orchestrator.py
api/: Cargo.toml
api/src/: auth.rs  database.rs  error.rs  main.rs  middleware.rs  websocket.rs
api/src/handlers/: activity.rs  auth.rs  mod.rs  projects.rs  repositories.rs  users.rs  workflows.rs
api/tests/: integration_tests.rs
api/tests/common/: mod.rs
auth/: github_oauth_setup.md
cli-shortcuts/: LICENSE  README.md  package-lock.json  package.json
config-manager/: Cargo.toml
config-manager/src/: lib.rs
configs/: ultra-swarm-workflows.json
content/: openrouter-deep-dive.md
context-tracker/: INSTALL.md  package-lock.json  package.json
database/: schema-postgres.sql  schema.sql
docs/: AGENT_PERSONAS_AND_MCP_PATTERNS.md  ASCII_HEADERS.md  CORE_PRO_README.md  CORE_VS_PRO_DESIGN.md  ECOSYSTEM_CATEGORIZATION.md  EXAMPLE_PLUGIN_TIERED.md  FREE_TIER_SETUP.md  GITHUB_OAUTH_SETUP.md  PLUGIN_AUTHOR_GUIDE.md  QUICK_START_CORE_PRO.md  README.md  RUVECTOR_CORE_PRO_INTEGRATION.md  ae-ltd-packs.md  website-operations.md
examples/: basic-deployment.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  test-registration.js  vite.config.ts
github-integration/: Cargo.toml
github-integration/src/: auth.rs  client.rs  lib.rs  project_sync.rs  simple.rs
lib/: context-monitor.js
master-orchestrator/: Cargo.toml
master-orchestrator/src/: leadership.rs  lib.rs  main.rs  resource_manager.rs  system_health.rs  workflow_manager.rs
mcp-servers/aegntic-mcp/servers/aegntic-knowledge-engine/: .env.example  README.md  pyproject.toml
mcp-servers/aegntic-mcp/servers/aegntic-knowledge-engine/src/: context_manager.py  crawl4ai_mcp.py  knowledge_graph.py  openrouter_client.py  sqlite_vector_db.py  task_manager.py  unified_tools.py  utils_optimized.py  vector_db.py
mcp-servers/aegntic-mcp/servers/ai-collaboration-hub/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CREDITS.md  Dockerfile  LICENSE  README.md  package.json  pyproject.toml
mcp-servers/aegntic-mcp/servers/ai-collaboration-hub/ai_collaboration_hub/: collaboration_manager.py  openrouter_client.py  server.py  types.py
mcp-servers/aegntic-mcp/servers/ai-collaboration-hub/docs/: EXAMPLES.md  INSTALLATION.md  PROMPTS.md  RESOURCES.md  TOOLS.md
mcp-servers/aegntic-mcp/servers/ai-collaboration-hub/src/: collaboration-manager.ts  index.ts  openrouter-client.ts  types.ts
mcp-servers/aegntic-mcp/servers/ai-collaboration-hub/tests/: test_collaboration_manager.py
mcp-servers/obsidian-elite-rag/: .env.example  INSTALL.md  LICENSE  package.json  pyproject.toml  skills.md
mcp-servers/obsidian-elite-rag/config/: automation-config.yaml
mcp-servers/obsidian-elite-rag/docs/: architecture.md  automation.md  creating-mcp-servers.md  port-handling.md  workflows.md
mcp-servers/obsidian-elite-rag/prompts/: retrieval-optimization.md  vault-analysis.md
mcp-servers/obsidian-elite-rag/resources/: knowledge-graph-schemas.md  retrieval-patterns.md  vault-organization-patterns.md
mcp-servers/obsidian-elite-rag/skills/: knowledge-management-strategy.md  retrieval-systems-optimization.md
mcp-servers/obsidian-elite-rag/src/obsidian_elite_rag/: __init__.py
mcp-servers/obsidian-elite-rag/src/obsidian_elite_rag/core/: graphiti_adapter.py  rag_engine.py
mcp-servers/obsidian-elite-rag/src/obsidian_elite_rag/scripts/: setup-vault.sh  start-rag-engine.sh
memre/: README.md  package.json
migrations/: supabase-triggers.sql
monitoring/: MONITORING.md  alerts.yml  grafana-dashboard.json  prometheus.yml
nginx/: nginx.conf
orchestrator/: Cargo.toml
plugins/: checkout.ts  packs.json
private/: .gitattributes  README.md
public/: index.html  index.js  site.webmanifest
scripts/: add-featured-resources.ts  apply-cldcde-branding.js  (+26 more)
vibe-kanban/: Cargo.toml
vibe-kanban/src/: lib.rs
vibe-kanban/static/: dashboard.html  index.html
web-dashboard/: Cargo.toml
web-dashboard/migrations/: 20240125_001_initial_schema.sql
web-dashboard/src/: auth.rs  handlers.rs  lib.rs  main.rs  middleware.rs  template_engine.rs  templates.rs  websocket.rs
web-dashboard/src/api/: README.md  auth.rs  database.rs  errors.rs  github.rs  mod.rs  projects.rs  workflows.rs
web-dashboard/static/css/: components.css  design-system.css  github-dark.css  github-theme-components.css  glassmorphic.css
web-dashboard/static/js/: components.js  dashboard.js  workflow-visualizer.js
web-dashboard/templates/: base.html  dashboard.html  github-setup.html  login.html  projects.html  repositories.html  settings.html  workflows-new.html  workflows.html
workflow-coordinator/: Cargo.toml
workflow-coordinator/src/: agent_manager.rs  communication.rs  lib.rs  phase_manager.rs  quality_assurance.rs
(+955 files in other folders)
