[package]
name = "vibe-kanban"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Workspace dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
dashmap.workspace = true
futures.workspace = true

# Web framework
axum = { workspace = true, features = ["ws"] }
tower.workspace = true
hyper.workspace = true

# Local dependencies
master-orchestrator = { path = "../master-orchestrator" }
workflow-coordinator = { path = "../workflow-coordinator" }
github-integration = { path = "../github-integration" }