[project]
name = "aegntic-knowledge-engine"
version = "1.0.0"
description = "Zero-cost unified knowledge engine with web crawling, RAG, memory graph, tasks, and documentation for AI agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crawl4ai==0.6.2",
    "mcp==1.7.1",
    "python-dotenv==1.0.1",
    "sentence-transformers==3.4.0",
    "httpx==0.28.1",
    "aiosqlite==0.20.0",
]
